--- a/SQLiteCRUDOperations/app/src/main/res/layout/list_item_student.xml
+++ b/SQLiteCRUDOperations/app/src/main/res/layout/list_item_student.xml
@@ -10,6 +10,7 @@
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:id="@+id/relative_layout"
         android:orientation="vertical">
 
         <android.support.v7.widget.AppCompatTextView
@@ -83,5 +84,13 @@
                 android:background="@drawable/ic_delete_black_24dp"
                 android:onClick="onClickDelete" />
         </android.support.v7.widget.LinearLayoutCompat>
+
+        <android.support.v7.widget.AppCompatImageView
+            android:id="@+id/iv_dp"
+            android:layout_width="90dp"
+            android:layout_height="90dp"
+            android:layout_alignParentRight="true"
+            android:layout_marginRight="16dp"
+            android:layout_marginTop="56dp" />
     </RelativeLayout>
 </android.support.v7.widget.CardView>
